--- a/css/main.css
+++ b/css/main.css
@@ -10,28 +10,33 @@
 }
 
 /** || GENERAL */
-.container {
+.body__container {
     min-width: 1000px;
     width: 1500px;
     background-color: aqua;
     margin: 0 auto;
 }
 
+header {
+    background-color: #f0c300;
+    overflow: hidden;
+    padding: 8px 16px;
+}
+
 /** || TOP HEADER */
 #header__top {
     height: 50px;
-    background-color: #f0c300;
 }
 
 #header__top {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 
-#header__icon > a > span {
-    width: 300px;
-    height: 50px;
+.header__logo > span {
+    font-size: 30px;
     color: black;
     text-shadow: 2px 4px 3px rgba(2, 0, 0, 0.2);
 }
@@ -54,4 +59,8 @@
 #header__top li span {
     display: inline-block;
     margin-left: 6px;
+}
+
+#header__bottom {
+    
 }
