--- a/css/style.css
+++ b/css/style.css
@@ -17,13 +17,12 @@
     margin: 0 auto;
 }
 
+/** || HEADER */
+
 header {
     background-color: black;
-    overflow: hidden;
-    padding: 8px 16px;
+    padding: 0px 16px;
 }
-
-/** || HEADER */
 
 .header__flex {
     display: flex;
@@ -53,7 +52,7 @@ header {
 .header__menu li > a {
     display: inline-block;
     position: relative;
-    font-size: 15px;
+    font-size: 18px;
     line-height: 50px;
 
     color: #f0c300;
@@ -77,7 +76,7 @@ header {
 #header__div__search {
     background-color: rgba(240, 195, 0, 0.8);
     height: 40px;
-    width: 340px;
+    width: 380px;
     margin-right: 20px;
     border-radius: 20px;
     padding: 5px 0px 5px 5px;
@@ -101,9 +100,51 @@ header {
     width: 30px;
     border: 0;
     border-radius: 50%;
+    outline: 0;
 }
 
 /* Clearfix*/
 #header__div__search::after {
     overflow: auto;
+}
+
+/** HEADER MULTI-LEVEL MENU */
+.header__main__category {
+    position: relative;
+}
+
+.header__main__category ul {
+    display: none;
+    position: absolute;
+}
+
+li.header__main__category:hover {
+    background-color: #f0c300;
+}
+
+li.header__main__category:hover > a {
+    color: black;
+}
+
+li.header__main__category:hover > ul {
+    display: block;
+    top: 101%;
+    left: 0;
+    width: 200%;
+    outline: 1px solid #f0c300;
+}
+
+.header__main__category ul li {
+    display: block;
+    line-height: 50px;
+    background-color: black;
+}
+
+/* Lv 2 menu*/
+li.header__main__category:hover > .list__sub__categories {
+    display: block;
+    top: 0;
+    left: 100%;
+    width: 200%;
+    outline: 1px solid #f0c300;
 }
