--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,8 @@ main {
     overflow: hidden;
     height: 50%;
     text-align: center;
+
+    padding: 20px;
 }
 
 li.category:nth-child(1),
@@ -187,15 +189,14 @@ li.category:nth-child(2) {
     height: 100%;
     overflow: hidden;
     position: relative;
-    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
 }
 
 .category__thumbnail-padded-aspect-ratio-container {
     overflow: hidden;
     width: 100%;
     height: 100%;
-    border-radius: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
 }
 
 .category__thumbnail-padded-aspect-ratio-container .category__thumbnail-img {
@@ -247,26 +248,24 @@ li.category:nth-child(2) {
     opacity: 1;
 }
 
-/** TOP PICK*/
+/** TOP PICK, FEATURED COLLECTION*/
 
 .products-top-pick,
 .featured-collection {
     text-align: center;
-
     border: none;
     outline: none;
     margin-bottom: 5rem;
-
     background-color: white;
     border-radius: 20px;
     box-shadow: 8px 8px 30px -10px black;
+    margin: 20px;
 }
 
 .section-header {
     display: inline-block;
     margin-bottom: 20px;
     text-transform: uppercase;
-    font-weight: 500;
     font-size: 2em;
     padding: 5px 10px;
     color: #f0c300;
