--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 /** || RESET CSS */
-@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200&display=swap");
+@import "https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,500&display=swap";
+@import "https://fonts.googleapis.com/css2?family=Poppins:wght@100;200&display=swap";
+
 * {
     margin: 0;
     padding: 0;
@@ -11,7 +12,6 @@
 }
 
 /** || GENERAL */
-
 /** || HEADER */
 header {
     z-index: 2;
@@ -51,7 +51,6 @@ header {
     position: relative;
     font-size: 18px;
     line-height: 50px;
-
     color: #f0c300;
     text-transform: uppercase;
 }
@@ -148,11 +147,10 @@ li.header__main__category:hover > .list__sub__categories {
 }
 
 /** || MAIN CONTAINER */
-
 main {
     z-index: 1;
     height: fit-content;
-    background: linear-gradient(45deg, rgba(234, 185, 45, 1) 0%, rgba(199, 152, 16, 1) 69%);
+    background: linear-gradient(45deg, #eab92d 0%, #c79810 69%);
 }
 
 .container__content-center {
@@ -174,7 +172,6 @@ main {
     overflow: hidden;
     height: 50%;
     text-align: center;
-
     padding: 20px;
 }
 
@@ -205,7 +202,6 @@ li.category:nth-child(2) {
     width: 100%;
     height: 100%;
     object-fit: cover;
-
     transition: transform 0.9s ease;
 }
 
@@ -220,13 +216,13 @@ li.category:nth-child(2) {
     font-size: 1.5rem;
     font-family: "Poppins";
     text-transform: uppercase;
-
     transition: opacity 0.5s ease-in-out;
 }
 
 .category__desc {
     font-size: 3rem;
 }
+
 .category__links {
     display: inline-block;
     margin-top: 20px;
@@ -249,7 +245,6 @@ li.category:nth-child(2) {
 }
 
 /** TOP PICK, FEATURED COLLECTION*/
-
 .products-top-pick,
 .featured-collection {
     text-align: center;
@@ -269,7 +264,7 @@ li.category:nth-child(2) {
     font-size: 2em;
     padding: 5px 10px;
     color: #f0c300;
-    background-color: rgba(0, 0, 0, 1);
+    background-color: black;
     border-radius: 10px;
     margin-top: 10px;
     width: fit-content;
@@ -284,7 +279,6 @@ li.category:nth-child(2) {
 .product {
     flex-basis: 25%;
     padding: 20px;
-
     box-shadow: 5px 5px 10 12 black;
 }
 
@@ -298,3 +292,5 @@ li.category:nth-child(2) {
         flex-basis: 50%;
     }
 }
+
+/*# sourceMappingURL=css.map */
