--- a/scss/0-Helpers/Mixin/_mixin.scss
+++ b/scss/0-Helpers/Mixin/_mixin.scss
@@ -31,6 +31,7 @@
     }
 }
 
-//  =================================
-//  
-//  =================================
+// Centre
+@mixin centre-component {
+    margin: auto 0;
+}
