--- a/scss/1-Bases/_reset.scss
+++ b/scss/1-Bases/_reset.scss
@@ -2,10 +2,21 @@
 //  RESET CSS COMPONENTS
 //  =================================
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    list-style-type: none;
+
     text-decoration: none;
-    font-family: Montserrat, sans-serif;
+}
+
+img {
+    width: 100%;
+}
+
+ul {
+    list-style-type: none;
+}
+
+button {
+    font-family: inherit;
 }
