REMODIFY footer by applying scss

--- a/scss/0-Helpers/Mixin/_mixin.scss
+++ b/scss/0-Helpers/Mixin/_mixin.scss
@@ -31,7 +31,9 @@
     }
 }
 
-// Centre
-@mixin centre-component {
-    margin: auto 0;
+//  =================================
+//  CENTRE BLOCK
+//  =================================
+@mixin centred-block {
+    margin: 0 auto;
 }
