--- a/scss/2-Layouts/Footer/_footer.scss
+++ b/scss/2-Layouts/Footer/_footer.scss
@@ -1,6 +1,10 @@
 
-
+/* EXPERIMENTAL FEATURES */
 .footer {
+    width: 100%;
+    height: 100%;
+    color: black;
+
     &__logo {
         @include centred-block;
     }
@@ -11,11 +15,33 @@
 }
 
 .footer-content {
-    &__right, &__left {
+    &__right, &__left, .icon-wrapper {
+        @include flex-container($dir: column);
+        justify-content: space-between;
+        align-items: center;
 
+    }
+
+    &__right {
+        flex: 0 0 25%;
+        .icon-wrapper {
+            @include flex-container($dir: row);
+        }
     }
 
     &__left {
-        
+        flex: 0 0 25%;
+        .icon-wrapper {
+            @include flex-container($dir: column);
+        }
+    }
+
+    &__title {
+        text-transform: uppercase;
+        font-size: 2rem;
+        flex: 1 1 30%;
     }
 }
+
+
+
