RESTRUCTURE some scss files, CREATE some empty php/scss

--- a/scss/2-Layouts/_navigation.scss
+++ b/scss/2-Layouts/_navigation.scss
@@ -1,3 +1,11 @@
+//  =================================
+//  NAVIGATION MULTILEVEL
+//  =================================
+//! EXPERIMENTAL: 
+//! Not proficient for other parts using this navigation
+//! Available for header.scss only
+
+
 .navigation-base {
     > li {
         display: inline-block;
