--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,3 +22,6 @@
 @import "./3-Modules/logo";
 @import "./3-Modules/search-bar";
 @import "./3-Modules/icon-title";
+
+// 4-PAGES
+@import "./4-Pages/index"
