--- a/scss/0-Helpers/Variable/_color.scss
+++ b/scss/0-Helpers/Variable/_color.scss
@@ -2,21 +2,17 @@
 //  COLOR
 //  =================================
 
-
 // BACKGROUND
-$color-bg: black;
+$color-bg: #ebb734;
 $color-transparent-bg: linear-gradient(45deg, #eab92d 0%, #c79810 69%);
-
 
 // FONT
 $color-font-1: #f0c300;
 $color-font-2: white;
 $color-font--hover: #f0c300;
 
-
 // BORDER
 $color-border: rgba(240, 195, 0, 0.8);
 
-
 // OUTLINE
-$color-outline: rgba(240, 195, 0, 0.8)
+$color-outline: rgba(240, 195, 0, 0.8);
