--- a/scss/2-Layouts/_header.scss
+++ b/scss/2-Layouts/_header.scss
@@ -4,7 +4,7 @@
 
 .header {
     z-index: 2;
-    background-color: black;
+    background-color: #ebb734;
     padding: 0px 16px;
     position: sticky;
     top: 0;
