--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,13 +15,15 @@
 @import "./1-Bases/initial";
 
 // 2-LAYOUTS
-@import "./2-Layouts/Header/header";
-@import "./2-Layouts/Header/navigation";
+@import "./2-Layouts/header";
+@import "./2-Layouts/navigation";
+@import "./2-Layouts/container-center";
+@import "./2-Layouts/footer";
 
 // 3-MODULES
 @import "./3-Modules/logo";
 @import "./3-Modules/search-bar";
-@import "./3-Modules/icon-title";
+@import "./3-Modules/icon-paragraph";
 
 // 4-PAGES
-@import "./4-Pages/index"
+@import "./4-Pages/index";
