--- a/scss/1-Bases/_reset.scss
+++ b/scss/1-Bases/_reset.scss
@@ -5,8 +5,13 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-
     text-decoration: none;
+}
+
+a:visited,
+a:active,
+a:focus {
+    color: black;
 }
 
 img {
