--- a/scss/3-Modules/_icon-paragraph.scss
+++ b/scss/3-Modules/_icon-paragraph.scss
@@ -1,20 +1,30 @@
-
-
 //  =================================
 //  DISPLAY FLEX FOR THE CONTAINER
 //  =================================
 
-
 .icon-pagragraph {
     @include flex-container();
-    
-    icon {
-        font-size: large;
+
+    a {
+        display: inline-block;
+
+        width: 2rem;
+        height: 2rem;
+        background-color: #f0c300;
+        text-align: center;
+        line-height: 2rem;
+        border-radius: 10px;
+    }
+
+    i {
+        font-size: larger;
     }
 
     p {
         font-size: 1rem;
-        font-style: normal;
-        font-weight: 300;
+        font-weight: 800;
+
+        @include flex-container($dir: column);
+        justify-content: center;
     }
 }
