--- a/css/styles.css
+++ b/css/styles.css
@@ -65,8 +65,7 @@ form:focus {
 
 .header {
   z-index: 2;
-  background-color: #ebb734;
-  padding: 0px 16px;
+  background-color: black;
   position: sticky;
   top: 0;
 }
@@ -158,8 +157,9 @@ form:focus {
   width: 150%;
 }
 
-.container-center {
-  width: 90%;
+.container--center {
+  width: 1500px;
+  height: inherit;
   margin: 0 auto;
 }
 
@@ -293,6 +293,53 @@ form:focus {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.category {
+  text-align: center;
+}
+.category__content {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+  overflow: hidden;
+}
+.category__thumbnail-cover {
+  width: 100%;
+  height: fit-content;
+}
+.category__img {
+  display: block;
+  object-fit: cover;
+  max-width: 100%;
+  max-height: 100%;
+}
+.category__info {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.categories {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: calc($gap * -1) 0 0 calc($gap * -1);
+  width: 100%;
+}
+.categories > * {
+  padding: 2rem 0 0 2rem;
+}
+.categories .category {
+  flex: 0 0 50%;
+}
+.categories .category:nth-child(1) {
+  flex-basis: 100%;
+}
+.categories .category:nth-child(2) {
+  flex-basis: 100%;
 }
 
 /*# sourceMappingURL=styles.css.map */
