--- a/scss/0-Helpers/Mixin/_mixin.scss
+++ b/scss/0-Helpers/Mixin/_mixin.scss
@@ -46,3 +46,17 @@
     flex-direction: $dir;
     flex-wrap: $wrap;
 }
+
+//  =================================
+//  DISPLAY FLEX WITH RESPONSIVE ON EACH ITEM
+//  =================================
+@mixin responsive-flex-container($dir: null, $wrap: wrap) {
+    @include flex-container($dir, $wrap);
+    $gap: 2rem;
+    padding: calc($gap * -1) 0 0 calc($gap * -1);
+    width: 100%;
+
+    > * {
+        padding: $gap 0 0 $gap;
+    }
+}
