--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,6 +24,8 @@
 @import "./3-Modules/logo";
 @import "./3-Modules/search-bar";
 @import "./3-Modules/icon-paragraph";
+@import "./3-Modules/category";
+@import "./3-Modules/product-item";
 
 // 4-PAGES
 @import "./4-Pages/index";
