--- a/scss/3-Modules/_category.scss
+++ b/scss/3-Modules/_category.scss
@@ -29,9 +29,9 @@
         transform: translate(-50%, -50%);
     }
 
-    &__desc {
-    }
+    // &__desc {
+    // }
 
-    &__links {
-    }
+    // &__links {
+    // }
 }
