--- a/scss/4-Pages/_index.scss
+++ b/scss/4-Pages/_index.scss
@@ -1,4 +1,4 @@
-@import "./Pages//home";
+@import "./Pages/home";
 @import "./Pages/collection";
-@import "./Pages//cart";
+@import "./Pages/cart";
 @import "./Pages/product";
