--- a/css/styles.css
+++ b/css/styles.css
@@ -324,11 +324,12 @@ form:focus {
 }
 
 .categories {
+  padding-top: 2rem;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 100%;
   justify-content: space-between;
+  width: 100%;
 }
 .categories > * {
   margin: 0 0 1% 0;
