--- a/css/styles.css
+++ b/css/styles.css
@@ -13,10 +13,6 @@ a:focus {
   color: black;
 }
 
-img {
-  width: 100%;
-}
-
 ul {
   list-style: none;
 }
@@ -297,30 +293,61 @@ form:focus {
 
 .category {
   text-align: center;
-}
-.category__content {
-  position: relative;
   width: 100%;
   height: 100%;
   border-radius: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
   overflow: hidden;
 }
+.category__content {
+  position: relative;
+  overflow: hidden;
+}
 .category__thumbnail-cover {
-  width: 100%;
-  height: fit-content;
+  overflow: hidden;
 }
 .category__img {
   display: block;
+  opacity: 0.76;
   object-fit: cover;
   max-width: 100%;
   max-height: 100%;
+  transition: transform 0.9s ease;
 }
 .category__info {
+  display: none;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+.category__desc {
+  text-transform: uppercase;
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  color: white;
+}
+.category__links {
+  display: inline-block;
+}
+.category__links > a {
+  cursor: pointer;
+  color: black;
+  display: block;
+  height: 2em;
+  width: 7em;
+  background-color: #eab92d;
+  border-radius: 10px;
+  line-height: 2em;
+  box-shadow: 0 0 5px 0px rgba(0, 0, 0, 0.8);
+}
+
+.category__thumbnail-cover:hover .category__img {
+  transform: scale(1.1);
+  opacity: 1;
+}
+.category__thumbnail-cover:hover .category__info {
+  display: block;
 }
 
 .categories {
