--- a/scss/3-Modules/_category.scss
+++ b/scss/3-Modules/_category.scss
@@ -1,37 +1,70 @@
 .category {
     text-align: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+    overflow: hidden;
 
     &__content {
         position: relative;
-        width: 100%;
-        height: 100%;
-        border-radius: 20px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
         overflow: hidden;
     }
 
     &__thumbnail-cover {
-        width: 100%;
-        height: fit-content;
+        overflow: hidden;
     }
 
     &__img {
         display: block;
+        opacity: 0.76;
         object-fit: cover;
         max-width: 100%;
         max-height: 100%;
+        transition: transform 0.9s ease;
     }
 
     &__info {
+        display: none;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
     }
 
-    // &__desc {
-    // }
+    &__desc {
+        text-transform: uppercase;
+        font-size: 2rem;
+        margin-bottom: 1rem;
+        color: white;
+    }
 
-    // &__links {
-    // }
+    &__links {
+        display: inline-block;
+
+        > a {
+            cursor: pointer;
+            color: black;
+            display: block;
+            height: 2em;
+            width: 7em;
+            background-color: #eab92d;
+            border-radius: 10px;
+            line-height: 2em;
+            box-shadow: 0 0 5px 0px rgba(0, 0, 0, 0.8);
+        }
+    }
+}
+
+.category {
+    &__thumbnail-cover:hover {
+        .category__img {
+            transform: scale(1.1);
+            opacity: 1;
+        }
+
+        .category__info {
+            display: block;
+        }
+    }
 }
