--- a/scss/1-Bases/_reset.scss
+++ b/scss/1-Bases/_reset.scss
@@ -8,15 +8,16 @@
     text-decoration: none;
 }
 
+div {
+    border: 0;
+    outline: 0;
+}
+
 a:visited,
 a:active,
 a:focus {
     color: black;
 }
-
-// img {
-//     width: 100%;
-// }
 
 ul {
     list-style: none;
