--- a/scss/4-Pages/Pages/_home.scss
+++ b/scss/4-Pages/Pages/_home.scss
@@ -1,10 +1,26 @@
 .categories {
     padding-top: 2rem;
 
-    @include responsive-flex-row-container($dir: row, $wrap: wrap, $items-per-line: 2, $gap-space: 1%);
+    @include responsive-flex-row-container($dir: row, $wrap: wrap, $items-per-line: 2, $gap-space: 3%);
     @for $i from 1 through 2 {
         .category:nth-child(#{$i}) {
             flex-basis: 100%;
+            height: 50em;
         }
     }
+}
+
+.container__top-pick,
+.container__featured-collection {
+    text-align: center;
+    border: none;
+    outline: none;
+    background-color: white;
+    margin: 3rem 0;
+    border-radius: 20px;
+    box-shadow: 8px 8px 30px -10px black;
+}
+
+.list-products {
+    @include responsive-flex-row-container($dir: row, $wrap: wrap, $items-per-line: 4, $gap-space: 3%);
 }
