--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,7 +25,10 @@
 @import "./3-Modules/search-bar";
 @import "./3-Modules/icon-paragraph";
 @import "./3-Modules/category";
-@import "./3-Modules/product-item";
+@import "./3-Modules/product";
+@import "./3-Modules/category";
+@import "./3-Modules//section-header";
+@import "./3-Modules/horizontal-line-break";
 
 // 4-PAGES
 @import "./4-Pages/index";
