--- a/fake.css
+++ b/fake.css
@@ -239,8 +239,8 @@ main {
 }
 
 /** TOP PICK, FEATURED COLLECTION*/
-.products-top-pick,
-.featured-collection {
+.container__top-pick,
+.container__featured-collection {
     text-align: center;
     border: none;
     outline: none;
@@ -251,35 +251,12 @@ main {
     margin: 20px;
 }
 
-.section-header {
-    display: inline-block;
-    margin-bottom: 20px;
-    text-transform: uppercase;
-    font-size: 2em;
-    padding: 5px 10px;
-    color: #f0c300;
-    background-color: black;
-    border-radius: 10px;
-    margin-top: 10px;
-    width: fit-content;
-}
-
 .list-products {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
 
-.product {
-    flex-basis: 25%;
-    padding: 20px;
-    box-shadow: 5px 5px 10 12 black;
-}
-
-.product__image img {
-    width: 100%;
-    height: 100%;
-}
 
 @media (max-width: 600px) {
     .product {
