--- a/scss/3-Modules/_category.scss
+++ b/scss/3-Modules/_category.scss
@@ -1,35 +1,44 @@
 .category {
     text-align: center;
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
-    overflow: hidden;
 
     &__content {
         position: relative;
+        width: 100%;
+        height: 100%;
+        border-radius: 20px;
+        box-shadow: 0 0 16px rgba(0, 0, 0, 0.7);
+        @include scale-image-no-overflow-border();
         overflow: hidden;
     }
 
     &__thumbnail-cover {
-        overflow: hidden;
+        @include scale-image-no-overflow-border();
+        z-index: 1;
     }
 
     &__img {
+        z-index: -1;
         display: block;
-        opacity: 0.76;
+
         object-fit: cover;
         max-width: 100%;
         max-height: 100%;
+
+        -webkit-filter: brightness(100%);
+        filter: brightness(100%);
+
+        transition: brightness 0.9s ease;
         transition: transform 0.9s ease;
     }
 
     &__info {
-        display: none;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        visibility: hidden;
+        opacity: 0;
+        transition: opacity 0.7s ease-in-out;
     }
 
     &__desc {
@@ -56,15 +65,15 @@
     }
 }
 
-.category {
-    &__thumbnail-cover:hover {
-        .category__img {
-            transform: scale(1.1);
-            opacity: 1;
-        }
+.category:hover {
+    .category__img {
+        transform: scale(1.1);
+        -webkit-filter: brightness(80%);
+        filter: brightness(80%);
+    }
 
-        .category__info {
-            display: block;
-        }
+    .category__info {
+        visibility: visible;
+        opacity: 1;
     }
 }
